--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -19,6 +19,6 @@ jobs:
     - name: checkout repo
       uses: actions/checkout@v3
     - name: build pdfs
-      run: latexmk ./docs/HazardAnalysis/HazardAnalysis.tex
+      run: (cd /docs/HazardAnalysis && latexmk HazardAnalysis.tex)
 
       
