--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -11,7 +11,7 @@ on:
     - 'docs/**'
 
 jobs:
-  build_latex:
+ build_latex:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/moderncv/debian-texlive-docker:main
@@ -20,6 +20,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 2  # Fetch enough history to compare with the previous commit
+    - name: install git
+      run: |
+        apt-get update && apt-get install -y git
     - name: build updated pdfs
       run: |
         # Find all changed .tex files in the docs folder
