--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [ main ]
     paths:
-    - 'docs/**'
+      - 'docs/**'
   pull_request:
     branches:
-    - main
+      - main
     paths:
-    - 'docs/**'
+      - 'docs/**'
 
 jobs:
   build_latex:
@@ -17,19 +17,25 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v3
-      with:
-        fetch-depth: 2
 
-    - name: Compile LaTeX files
-      uses: xu-cheng/latex-action@v2
-      with:
-        root_file: docs/**/*.tex  # Compiles all .tex files
+    - name: Install dependencies
+      run: |
+        apt-get update && apt-get install -y texlive-full
+
+    - name: Compile all LaTeX files
+      run: |
+        # Find all .tex files in the docs directory
+        find ./docs -name "*.tex" | while read file; do
+          echo "Compiling $file"
+          latexmk -pdf -cd "$file"
+        done
 
     - name: upload pdfs
       uses: actions/upload-artifact@v3
       with:
         name: pdfs
         path: docs/**/*.pdf
+
 
 
       
