--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -20,11 +20,22 @@ jobs:
       uses: actions/checkout@v3
     - name: build pdfs
       run: (cd ./docs/HazardAnalysis && latexmk HazardAnalysis.tex)
-    - name: upload pdfs
-      uses: actions/upload-artifact@v3
-      with:
-        name: pdfs
-        path: docs/**/*.pdf
+    - name: Commit and push updated PDFs
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        # Configure git user
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+        
+        # Add the generated PDFs to the repo
+        git add docs/**/*.pdf
+        
+        # Commit changes
+        git commit -m "Update generated PDFs"
+        
+        # Push changes to the main branch
+        git push origin main
 
 
 
