--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -18,8 +18,13 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v3
+
+    - name: Mark repository as safe
+      run: git config --global --add safe.directory /__w/OKKM.insights/OKKM.insights
+      
     - name: build pdfs
       run: (cd ./docs/HazardAnalysis && latexmk HazardAnalysis.tex)
+      
     - name: Commit and push updated PDFs
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -27,6 +32,8 @@ jobs:
         # Configure git user
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
+
+        git config --global --add safe.directory /__w/OKKM.insights/OKKM.insights
         
         # Add the generated PDFs to the repo
         git add docs/**/*.pdf
