--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -18,31 +18,28 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v3
-
-    - name: Mark repository as safe
-      run: git config --global --add safe.directory /__w/OKKM.insights/OKKM.insights
       
     - name: build pdfs
       run: (cd ./docs/HazardAnalysis && latexmk HazardAnalysis.tex)
       
-    - name: Commit and push updated PDFs
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        # Configure git user
-        git config --global user.email "actions@github.com"
-        git config --global user.name "GitHub Actions"
+   - name: List files in docs directory
+      run: ls -R docs
 
-        git config --global --add safe.directory /__w/OKKM.insights/OKKM.insights
-        
-        # Add the generated PDFs to the repo
-        git add -A
-        
-        # Commit changes
-        git commit -m "Update generated PDFs"
-        
-        # Push changes to the main branch
-        git push origin main
+    - name: Check Git status
+      run: git status
+
+    - name: Mark repository as safe
+      run: git config --global --add safe.directory /__w/OKKM.insights/OKKM.insights
+
+    - name: Add and commit updated PDFs
+      uses: EndBug/add-and-commit@v9
+      with:
+        author_name: 'Your Name'
+        author_email: 'your-email@example.com'
+        message: 'Update generated PDFs'
+        add: 'docs/**/*.pdf'
+        push: true
+
 
 
 
