--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -37,7 +37,7 @@ jobs:
         author_name: 'Your Name'
         author_email: 'your-email@example.com'
         message: 'Update generated PDFs'
-        add: './docs/**/*.pdf'
+        add: './docs/*/*.pdf'
         push: true
 
 
