--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -28,6 +28,11 @@ jobs:
     - name: List files in docs directory
       run: ls ./docs/*/*.pdf
 
+    - name: Set Git user info
+      run: |
+        git config --global user.email "your-email@example.com"
+        git config --global user.name "Your Name"
+
     - name: Mark repository as safe
       run: git config --global --add safe.directory /__w/OKKM.insights/OKKM.insights
 
@@ -38,4 +43,9 @@ jobs:
       run: |
         git add ./docs/*/*.pdf
         git commit -m "Update generated PDFs" || echo "No changes to commit"
-        git push
+        
+    - name: Push changes
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: |
+        git push https://x-access-token:${GH_TOKEN}@github.com/OlegGlo/OKKM.insights.git
