--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -48,6 +48,8 @@ jobs:
         git status
 
     - name: Commit and push updated PDFs
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git commit -m "Update generated PDFs" || echo "No changes to commit"
-        git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/OlegGlo/OKKM.insights.git
+        git push origin main
