--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         (cd ./docs/HazardAnalysis && latexmk -pdf HazardAnalysis.tex)
         (cd ./docs/DevelopmentPlan && latexmk -pdf DevelopmentPlan.tex)
-        (cd ./docs/ProblemStatementAndGoals && latexmk -pdf ProblemStatementAndGoals.tex)
+        (cd ./docs/ProblemStatementAndGoals && latexmk -pdf ProblemStatement.tex)
 
     - name: List files in docs directory
       run: ls -R docs
