--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -30,6 +30,7 @@ jobs:
         (cd ./docs/SRS && latexmk -pdf SRS.tex)
         (cd ./docs/VnVPlan && latexmk -pdf VnVPlan.tex)
         (cd ./docs/projMngmnt && latexmk -pdf POC_Team_Contrib.tex)
+        (cd ./docs/projMngmnt && latexmk -pdf Rev0_Team_Contrib.tex)
         (cd ./docs/Design/SoftArchitecture && latexmk -pdf MG.tex)
         (cd ./docs/Design/SoftDetailedDes && latexmk -pdf MIS.tex)
 
