--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -57,6 +57,7 @@ jobs:
       run: |
         git add -f ./docs/*/*.pdf
         git add -f ./docs/Design/*/*.pdf
+        git add -f ./docs/Extras/*/*.pdf
         git status
 
     - name: Commit and push updated PDFs
